--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./assets/rel.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card</title>
+    <title>My Profile Card</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
